Mobile nav updates

--- a/index.html
+++ b/index.html
@@ -45,88 +45,82 @@
                                                 <div class="in fw-600 uk-text-secondary uk-text-uppercase">// Select design Samples</div>
                                                 <hr class="uk-margin-small" />
 
-                                                <div class="">
-                                                    <div class="uk-grid-small uk-child-width-1-2" uk-grid>
-                                                    <div class="uk-margin-small-bottom">
-                                                        <a href="mack.html" class="uk-light">
-                                                            <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);">
+                                                <div class="uk-hidden">
+                                                    <div class="uk-grid-small" uk-grid>
+                                                        <div class="uk-margin-small-bottom uk-width-medium">
+                                                            <a href="mack.html" class="uk-light">
+                                                                <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);">
 
-                                                                <div class="uk-overlay-primary uk-position-cover"></div>
+                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
 
-                                                                <div class="uk-overlay uk-position-bottom">
-                                                                    <div class="fs-20 fw-500 uk-margin-xsmall-bottom uk-box-shadow-large">Mack Trucks</div>
-                                                                    <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</p>
-                                                                    <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400 ">Current Project</div>
+                                                                    <div class="uk-overlay uk-position-bottom">
+                                                                        <div class="fs-20 fw-500 uk-margin-xsmall-bottom uk-box-shadow-large">Mack Trucks</div>
+                                                                        <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</p>
+                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400 ">Current Project</div>
+                                                                    </div>
                                                                 </div>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div>
-                                                        <a href="5winsights.html"  class="uk-light">
-                                                            <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
-
-                                                                <div class="uk-overlay-primary uk-position-cover"></div>
-
-                                                                <div class="uk-overlay uk-position-bottom">
-                                                                    <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
-                                                                    <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</p>
-                                                                    <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
-                                                                </div>
-                                                            </div>
-                                                        </a>
-                                                    </div>
+                                                            </a>
                                                         </div>
+
+                                                        <div class="uk-width-medium">
+                                                            <a href="5winsights.html"  class="uk-light">
+                                                                <div class="uk-border-rounded-medium uk-text-secondary uk-background-cover uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
+
+                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
+
+                                                                    <div class="uk-overlay uk-position-bottom">
+                                                                        <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                        <p class="fs-14 uk-margin-remove-top uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</p>
+                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                    </div>
                                                 </div>
 
-                                                <div class="uk-margin-medium-top in fw-600 uk-text-secondary uk-text-uppercase">// Coming Soon</div>
-                                                <hr class="uk-margin-small uk-margin-remove-bottom" />
-                                            </div>
 
-                                            <div class="uk-margin-left uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > div > div">
 
-                                                <div class="uk-slider-items uk-margin-small-top uk-margin-bottom" uk-height-match="target: > div > .uk-background-default">
+                                                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true">
 
-                                                    <div class="uk-width-small">
-                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
-                                                            <div class="details">
-                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">American Addiction Centers</div>
-                                                                <p class="fs-14 uk-margin-remove">Lead Gen Campaign</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                                    <div class="uk-slider-items uk-margin-small-top uk-margin-bottom">
 
-                                                    <div class="uk-width-small">
-                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
-                                                            <div class="details">
-                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Boy Scouts of America</div>
-                                                                <p class="fs-14 uk-margin-remove">Fundraising Appeal</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                                        <div class="uk-margin-small-bottom uk-width-medium uk-margin-small-right">
+                                                            <a href="mack.html" class="uk-light">
+                                                                <div class="uk-border-rounded-large uk-text-secondary uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-bottom: 30">
 
-                                                    <div class="uk-width-small">
-                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
-                                                            <div>
-                                                                <div class="details">
-                                                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
-                                                                    <p class="fs-14 uk-margin-remove">Lead Gen Survey</p>
+                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
+
+                                                                    <div class="uk-overlay uk-position-bottom">
+                                                                        <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                                        <p class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</p>
+                                                                        
+                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400 ">Current Project</div>
+                                                                    </div>
                                                                 </div>
-                                                            </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <div class="uk-width-medium">
+                                                            <a href="5winsights.html"  class="uk-light">
+                                                                <div class="uk-border-rounded-large uk-text-secondary uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)" uk-height-viewport="offset-bottom: 30">
+
+                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
+
+                                                                    <div class="uk-overlay uk-position-bottom">
+                                                                        <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                        <p class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</p>
+                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
                                                         </div>
                                                     </div>
-
-                                                    <div class="uk-width-small">
-                                                        <div class="uk-background-muted uk-border-rounded-medium uk-padding uk-text-secondary uk-margin-small-right">
-                                                            <div class="details">
-                                                                <div class="fs-16 fw-500 uk-margin-xsmall-bottom">RateGenius</div>
-                                                                <p class="fs-14 uk-margin-remove">Lead Gen Campaign</p>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-
                                                 </div>
+
                                             </div>
+
+
 
                                             <ul class="uk-nav uk-list uk-nav-default fs-16 uk-hidden">
                                                 <li class="uk-nav-header fw-500">Current Projects<br />
