Mobile nav updates

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
                                                     <div class="uk-slider-items uk-margin-small-top uk-margin-bottom">
 
-                                                        <div class="uk-margin-small-bottom uk-width-medium uk-margin-small-right">
+                                                        <div class="uk-margin-small-bottom uk-width-medium uk-margin-small-right uk-background-secondary uk-border-rounded-large uk-overflow-hidden">
                                                             <a href="mack.html" class="uk-light">
-                                                                <div class="uk-border-rounded-large uk-text-secondary uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);" uk-height-viewport="offset-bottom: 30">
+                                                                <div class=" uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden " style="background-image: url(img/mack/mack-driver-survey.webp);">
+                                                                    
+                                                                    <div class="uk-position-cover dark-frost"></div>
 
-                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
-
-                                                                    <div class="uk-overlay uk-position-bottom">
+                                                                    <div class="uk-overlay uk-position-bottom ">
                                                                         <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
                                                                         <p class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</p>
                                                                         
@@ -103,9 +103,9 @@
 
                                                         <div class="uk-width-medium">
                                                             <a href="5winsights.html"  class="uk-light">
-                                                                <div class="uk-border-rounded-large uk-text-secondary uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)" uk-height-viewport="offset-bottom: 30">
+                                                                <div class="uk-border-rounded-large uk-text-secondary uk-background-cover uk-height-large uk-panel uk-flex uk-flex-center uk-flex-middle uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
 
-                                                                    <div class="uk-overlay-primary uk-position-cover"></div>
+                                                                    <div class="uk-position-cover dark-frost"></div>
 
                                                                     <div class="uk-overlay uk-position-bottom">
                                                                         <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
