--- a/mack.html
+++ b/mack.html
@@ -4,8 +4,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="initial-scale=1" />
         <base href />
-        <meta charset="utf-8" />
         <title>Brian French • Mack Trucks Survey Project</title>
+        <meta charset="utf-8" />
         <link rel="stylesheet" href="css/uikit.css" />
         <link rel="stylesheet" href="css/custom.css" />
         <script src="js/uikit.min.js"></script>
@@ -21,15 +21,14 @@
                     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
                                     })(window,document,'script','dataLayer','GTM-WJNPDXXB');</script>
         <!-- End Google Tag Manager -->
-
     </head>
 
     <body>
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJNPDXXB"
-                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJNPDXXB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
+        <!-- Header start -->
         <header>
             <div class="uk-background-muted">
                 <div uk-sticky="show-on-up: true">
@@ -40,32 +39,67 @@
                                 <ul class="uk-navbar-nav">
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
-                                            <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
-                                                <li class="uk-nav-header fw-500">Current Projects</li>
-                                                <li><a href="mack.html">Mack Trucks</a></li>
-                                                <li><hr /></li>
 
-                                                <li class="uk-nav-header fw-500 uk-margin-large-top">
-                                                    Past Work
-                                                </li>
-                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
-                                                <li><hr /></li>
+                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
 
-                                                <li class="uk-nav-header fw-500">Coming soon</li>
-                                                <li class="">American Addiction Centers<br />Boy Scouts of America<br />Mack Trucks<br />RateGenius</li>
-                                                <li><hr /></li>
+                                            <div class="uk-margin-left uk-margin-right uk-margin-top">
+                                                <div class="fs-14 in fw-600 uk-text-secondary uk-text-uppercase">// Select design Samples</div>
+                                                <hr class="uk-margin-small" />
+                                            </div>
 
-                                                <li class="uk-nav-header fw-500 uk-margin-large-top">Contact Me</li>
-                                                <li><a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn <span uk-icon="link-external"></span></a></li>
-                                            </ul>
+                                            <div class="">
+                                                <div class="uk-container uk-container-large uk-position-relative uk-slider uk-slider-container" uk-slider="finite: true">
+
+                                                    <div class="uk-slider-items uk-margin-small-top uk-margin-bottom uk-light">
+
+                                                        <!-- Mack -->
+                                                        <div class="uk-margin-left uk-margin-small-bottom">
+                                                            <a href="mack.html">
+                                                                <div class=" uk-width-medium uk-margin-small-right">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden  uk-border-rounded-large" style="background-image: url(img/mack/mack-driver-survey.webp);">
+
+                                                                        <div class="uk-position-cover dark-frost"></div>
+
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                                            <div class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</div>
+
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Current Project</div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <!-- 5W Insights -->
+                                                        <div class="uk-margin-small-bottom">
+                                                            <a href="5winsights.html">
+                                                                <div class="uk-margin-large-right uk-width-medium">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden uk-border-rounded-large" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
+
+                                                                        <div class="uk-position-cover dark-frost"></div>
+
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                            <div class="fs-18 uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</div>
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
                                         </div>
                                     </li>
                                 </ul>
                             </div>
 
                             <div class="uk-navbar-left">
-                                <div class=" uk-navbar-item uk-link-reset">
+                                <div class="uk-navbar-item uk-link-reset">
                                     <a href="/gd/" class="uk-logo warm uk-flex uk-flex-middle">
                                         <img src="img/headshot.webp" alt="" /> 
                                         <span>Brian French</span>&ensp;
