--- a/5winsights.html
+++ b/5winsights.html
@@ -30,7 +30,7 @@
 
         <!-- Header start -->
         <header>
-            <div class="uk-background-muted ">
+            <div class="uk-background-muted">
                 <div uk-sticky="show-on-up: true">
                     <nav class="uk-navbar-container uk-navbar-default no-border uk-box-shadow-small" uk-dropnav="align:center">
                         <div class="uk-container uk-container-xlarge" uk-navbar>
@@ -39,25 +39,60 @@
                                 <ul class="uk-navbar-nav">
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
-                                            <ul class="uk-nav uk-list uk-list-large uk-nav-default fs-16">
-                                                <li class="uk-nav-header fw-500">Current Projects</li>
-                                                <li><a href="mack.html">Mack Trucks</a></li>
-                                                <li><hr /></li>
 
-                                                <li class="uk-nav-header fw-500 uk-margin-large-top">
-                                                    Past Work
-                                                </li>
-                                                <li class=""><a href="5winsights.html">5W Insights</a></li>
-                                                <li><hr /></li>
+                                        <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
 
-                                                <li class="uk-nav-header fw-500">Coming soon</li>
-                                                <li class="">American Addiction Centers<br />Boy Scouts of America<br />Mack Trucks<br />RateGenius</li>
-                                                <li><hr /></li>
+                                            <div class="uk-margin-left uk-margin-right uk-margin-top">
+                                                <div class="fs-14 in fw-600 uk-text-secondary uk-text-uppercase">// Select design Samples</div>
+                                                <hr class="uk-margin-small" />
+                                            </div>
 
-                                                <li class="uk-nav-header fw-500 uk-margin-large-top">Contact Me</li>
-                                                <li><a href="https://www.linkedin.com/in/brianfrenchcreative/" class="" target="_blank">LinkedIn <span uk-icon="link-external"></span></a></li>
-                                            </ul>
+                                            <div class="">
+                                                <div class="uk-container uk-container-large uk-position-relative uk-slider uk-slider-container" uk-slider="finite: true">
+
+                                                    <div class="uk-slider-items uk-margin-small-top uk-margin-bottom uk-light">
+
+                                                        <!-- Mack -->
+                                                        <div class="uk-margin-left uk-margin-small-bottom">
+                                                            <a href="mack.html">
+                                                                <div class=" uk-width-medium uk-margin-small-right">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden  uk-border-rounded-large" style="background-image: url(img/mack/mack-driver-survey.webp);">
+
+                                                                        <div class="uk-position-cover dark-frost"></div>
+
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                                            <div class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</div>
+
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Current Project</div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+
+                                                        <!-- 5W Insights -->
+                                                        <div class="uk-margin-small-bottom">
+                                                            <a href="5winsights.html">
+                                                                <div class="uk-margin-large-right uk-width-medium">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden uk-border-rounded-large" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
+
+                                                                        <div class="uk-position-cover dark-frost"></div>
+
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                            <div class="fs-18 uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</div>
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
                                         </div>
                                     </li>
                                 </ul>
