--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <ul class="uk-navbar-nav">
                                     <li class="uk-padding-xsmall uk-padding-remove-vertical">
                                         <a class="uk-navbar-toggle uk-navbar-toggle-animate" href uk-navbar-toggle-icon></a>
-                                        
+
                                         <div class="uk-dropbar uk-dropbar-top uk-width-expand uk-padding-remove" uk-drop="stretch: y; animation:reveal-top; animate-out:true;mode:click">
 
                                             <div class="uk-margin-left uk-margin-right uk-margin-top">
@@ -47,39 +47,43 @@
                                                 <hr class="uk-margin-small" />
                                             </div>
 
-                                            <div class="uk-margin-left">
-                                                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true">
+                                            <div class="">
+                                                <div class="uk-container uk-container-large uk-position-relative uk-slider uk-slider-container" uk-slider="finite: true">
 
                                                     <div class="uk-slider-items uk-margin-small-top uk-margin-bottom uk-light">
 
                                                         <!-- Mack -->
-                                                        <div class="uk-margin-small-bottom uk-width-medium uk-margin-small-right uk-border-rounded-large uk-overflow-hidden">
+                                                        <div class="uk-margin-left uk-margin-small-bottom">
                                                             <a href="mack.html">
-                                                                <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden" style="background-image: url(img/mack/mack-driver-survey.webp);">
+                                                                <div class=" uk-width-medium uk-margin-small-right">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden  uk-border-rounded-large" style="background-image: url(img/mack/mack-driver-survey.webp);">
 
-                                                                    <div class="uk-position-cover dark-frost"></div>
+                                                                        <div class="uk-position-cover dark-frost"></div>
 
-                                                                    <div class="uk-overlay uk-position-bottom">
-                                                                        <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
-                                                                        <div class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</div>
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-24 fw-500 uk-margin-xsmall-bottom">Mack Trucks</div>
+                                                                            <div class="fs-18 uk-margin-remove-top uk-margin-small-bottom">Evolving a digital survey experience&nbsp;&rarr;</div>
 
-                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Current Project</div>
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Current Project</div>
+                                                                        </div>
                                                                     </div>
                                                                 </div>
                                                             </a>
                                                         </div>
 
                                                         <!-- 5W Insights -->
-                                                        <div class="uk-margin-small-bottom uk-width-medium uk-margin-right uk-border-rounded-large uk-overflow-hidden">
+                                                        <div class="uk-margin-small-bottom">
                                                             <a href="5winsights.html">
-                                                                <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
+                                                                <div class="uk-margin-large-right uk-width-medium">
+                                                                    <div class="uk-background-cover uk-height-large uk-panel uk-overflow-hidden uk-border-rounded-large" style="background-image: url(img/5winsights/conference-backdrop-mockup.webp)">
 
-                                                                    <div class="uk-position-cover dark-frost"></div>
+                                                                        <div class="uk-position-cover dark-frost"></div>
 
-                                                                    <div class="uk-overlay uk-position-bottom">
-                                                                        <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
-                                                                        <div class="fs-18 uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</div>
-                                                                        <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                        <div class="uk-overlay uk-position-bottom">
+                                                                            <div class="fs-20 fw-500 uk-margin-xsmall-bottom">5W Insights</div>
+                                                                            <div class="fs-18 uk-margin-small-bottom">Implementing a new brand identity&nbsp;&rarr;</div>
+                                                                            <div class="uk-label uk-background-muted uk-border-pill fs-10 fw-400">Past Work</div>
+                                                                        </div>
                                                                     </div>
                                                                 </div>
                                                             </a>
